fixed overflow

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body{
     width: 100vw;
     background-color: lightgray;
     text-align: center;
+    overflow: hidden;
 }
 .container{
     width: 80%;
@@ -188,6 +189,9 @@ body{
 }
 /******************************* MEDIA QUERY *******************************/
 @media (max-width: 450px) and (orientation: portrait) {
+    body{
+        overflow: auto;
+    }
     .container {
         width: 100%;
         height:75%;
@@ -239,6 +243,9 @@ body{
     }
 }
 @media (min-width: 451px) and (max-width: 768px)  and (orientation: portrait) {
+    body{
+        overflow: auto;
+    }
     .container {
         width: 100%;
         height:75%;
